# redup

./: .gitignore  Cargo.toml  README.md  build.rs  gen-man.sh
man/: redup.1
src/: main.rs
